// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-input"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
        >
          The input
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="default hideNumberSpinner input"
      id="the-input"
      type="text"
    />
    <div
      class="iconsPosition"
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-input"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
        >
          The input
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative"
  >
    <input
      aria-invalid="true"
      class="error hideNumberSpinner input"
      id="the-input"
      style="padding-right:calc(16px + 2rem)"
      type="text"
    />
    <div
      class="iconsPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
